@@ -1,6 +1,7 @@
 0.2.0
  - Renamed to pool_party.
  - Fixed PoolParty#shutdown for real.
+ - PoolParty#new now takes an optional block.
 
 0.1.1
   - Fixed ThreadPool#shutdown.
